deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi-mlops-backend-service
                port:
                  number: 80
